added abstract and suggested improvements

--- a/paper/config.tex
+++ b/paper/config.tex
@@ -8,6 +8,7 @@
 \usepackage{inputenc}
 \usepackage[ngerman,english]{babel}
 \usepackage{csquotes}
+\usepackage{microtype}
 
 % **************************************************
 % Information and Commands for Reuse
