--- a/paper/main.tex
+++ b/paper/main.tex
@@ -17,6 +17,7 @@
 % Front matter
 % --------------------------
 \input{content/titlepages}
+\input{content/abstract}
 
 % --------------------------
 % Body matter
