--- a/paper/config.tex
+++ b/paper/config.tex
@@ -49,9 +49,12 @@
   hratio=1:1,      % horizontally centered
   % vratio=1:1,      % vertically centered
 }
-\renewcommand{\baselinestretch}{1.15}
+\renewcommand{\baselinestretch}{1.13}
+\setlength{\parskip}{0.5em}
 \usepackage[parfill]{parskip}
 \usepackage{float}
+\widowpenalty=150%
+\clubpenalty=0%
 
 % Colors:
 \usepackage[usenames, dvipsnames, svgnames, table]{xcolor}
