--- a/paper/content/chapter-consequences.tex
+++ b/paper/content/chapter-consequences.tex
@@ -111,6 +111,7 @@ Here we will instead give an intuition for its key statements:
 	}\label{fig:cons:example}
 \end{figure}
 
+\vspace{-1em}%
 \subsection{Implications for Spectral Clustering}%
 \label{sec:cons:sc}
 
